--- a/projetos/templates/projetos/resultado_avaliacoes.html
+++ b/projetos/templates/projetos/resultado_avaliacoes.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 
-  <span class="titulo">Projetos</span>
+  <span class="titulo">Avaliações por Projetos</span>
   <br>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
