--- a/projetos/templates/projetos/resultado_avaliacoes.html
+++ b/projetos/templates/projetos/resultado_avaliacoes.html
@@ -11,6 +11,8 @@
   
   <script src="{% static 'js/w3.js' %}"></script>
 
+  <script>{% include "tooltip.js" %}</script>
+
 {% endblock %}
 
 {% block content %}
@@ -32,16 +34,16 @@
       <th style="border-right:0px; border-left:0px;"></th>
       <th style="border-right:0px; border-left:0px;"></th>
       <th colspan="3" class="text-center">
-      <b>Banca</b>
+      <b>Bancas</b>
       </th>
     </tr>
     <tr>
       <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Projeto</th>
       <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
       <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Orientador</th>
-      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Inter.</th>
-      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Final</th>
-      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Falconi</th>
+      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Intermediária">Inte.</th>
+      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Final">Final</th>
+      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Falconi">Falc.</th>
     </tr>      
 
     {% for projeto, banca_intermediaria, banca_final, banca_falconi in tabela %} 
@@ -66,18 +68,18 @@
             {% endif %}
         </td>
         <td class="text-center" style="white-space: nowrap;">
-          <a href="{% url 'conceitos_obtidos' projeto.id %}">
-            {{ banca_intermediaria }}
+          <a href="{% url 'conceitos_obtidos' projeto.id %}" data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_intermediaria.1 }}">
+            {{ banca_intermediaria.0|safe }}
           </a>
         </td>
         <td class="text-center" style="white-space: nowrap;">
-          <a href="{% url 'conceitos_obtidos' projeto.id %}">
-            {{ banca_final }}
+          <a href="{% url 'conceitos_obtidos' projeto.id %}" data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_final.1 }}">
+            {{ banca_final.0|safe }}
           </a>
         </td>
         <td class="text-center" style="white-space: nowrap;">
-          <a href="{% url 'conceitos_obtidos' projeto.id %}">
-            {{ banca_falconi }}
+          <a href="{% url 'conceitos_obtidos' projeto.id %}" data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_falconi.1 }}">
+            {{ banca_falconi.0|safe }}
           </a>
         </td>
 
@@ -108,6 +110,7 @@
                 $("table.projetos").replaceWith($("table.projetos",response));
                 $("#organizacao").prop('checked') ? $('#ProjetosTable tr > *:nth-child(2)').show() : $('#ProjetosTable tr > *:nth-child(2)').hide()
                 $("#orientador").prop('checked') ? $('#ProjetosTable tr > *:nth-child(3)').show() : $('#ProjetosTable tr > *:nth-child(3)').hide()
+                {% include "tooltip.js" %}
             },
             error: function(response) {
                 console.log('error')
